# amadeus

./: .gitignore  INSTALL.md  README.md  _engine.rpy  amadeus.rpy  android_engine.rpy  channel.rpy  core_engine.rpy  exception.rpy  tests.rpy
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: amadeus.cpp  amadeus.hpp
android/src/main/java/net/blackwoodlabs/renpy/: Amadeus.java
android/src/main/libfmod/: .gitignore  README.md
lib/: .gitignore  README.md
